# toa

./: Cargo.toml  Makefile  README.md  manifest.scm
appender/: Cargo.toml
appender-cli/: Cargo.toml
appender-cli/src/: magic.rs  main.rs  unix.rs
appender-fuse/: Cargo.toml
appender-fuse/src/: main.rs  unix.rs
appender/src/: builder.rs  device.rs  lib.rs  object.rs  pack.rs  reader.rs  record.rs
appender/src/builder/: worker.rs
appender/src/device/: io.rs
appender/src/object/: builder.rs  reader.rs
appender/src/reader/: cache.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  toa-blob-compress-fuzz.rs  toa-blob-fuzz.rs
src/: device.rs  lib.rs  object.rs  record.rs  snapshot.rs
toa/: Cargo.toml  README.md
toa-blob/: Cargo.toml  README.md
toa-blob-compress/: Cargo.toml  README.md
toa-blob-compress/src/: lib.rs
toa-blob/src/: lib.rs
toa-cli/: Cargo.toml
toa-cli/src/: magic.rs  main.rs  unix.rs
toa-core/: Cargo.toml
toa-core/src/: lib.rs
toa-fuse/: Cargo.toml
toa-fuse/src/: main.rs  unix.rs
toa-hash/: Cargo.toml  README.md
toa-hash/benches/: hash.rs
toa-hash/src/: lib.rs
toa-kv/: Cargo.toml  README.md
toa-kv/src/: lib.rs
toa-unix/: Cargo.toml  README.md
toa-unix/src/: lib.rs
toa-write-log/: Cargo.toml
toa-write-log/src/: lib.rs
toa/src/: builder.rs  lib.rs  object.rs  pack.rs  reader.rs  record.rs
toa/src/device/: fs.rs
