[package]
name = "appender"
version = "0.1.0"
edition = "2024"

[features]
std = ["alloc"]
alloc = []
rayon = ["std", "blake3/rayon", "dep:rayon-core"]

[dependencies]
blake3 = { version = "1.8.2", default-features = false }
chacha20poly1305 = { version = "0.10.1", features = ["reduced-round"] }
rayon-core = { version = "1.12.1", optional = true } # try to keep in sync with blake3
zstd-safe = { version = "7.2.4", default-features = false }

[dev-dependencies]
rand = { version = "0.8.0" }
