[package]
name = "toa-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.12"
arbitrary = { version = "1.4.2", features = ["derive"] }
tempfile = "3.26.0"
toa = { path = "../toa" }
toa-blob = { path = "../toa-blob" }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "toa-blob-fuzz"
path = "fuzz_targets/toa-blob-fuzz.rs"
test = false
doc = false
bench = false
