[package]
name = "toa-blob-compress"
version = "0.1.0"
edition = "2024"

[features]
lz4 = ["dep:lz4_flex"]
zstd = ["dep:zstd-safe"]

[dependencies]
toa-blob = { path = "../toa-blob" }
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics"] }
zstd-safe = { version = "7.2.4", features = ["fat-lto"], optional = true }
nora_endian = "0.1.3"
lz4_flex = { version = "0.13.0", optional = true, default-features = false, features = ["checked-decode", "safe-decode", "safe-encode"] }
