[package]
name = "toa-blob"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics"] }
chacha20poly1305 = { version = "0.10.1", features = ["reduced-round"] }
nora_endian = "0.1.3"
rand = { version = "0.10", default-features = false }

[dev-dependencies]
rand = { version = "0.10" }
