[package]
name = "toa-hash"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bytemuck = { version = "1.25.0", features = ["derive"] }
sha3 = { version = "0.10.8", default-features = false }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "hash"
harness = false
