[package]
name = "toa-write-log"
version = "0.1.0"
edition = "2024"

[features]
std = ["alloc"]
alloc = []

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
blake3 = { version = "1.8.2", default-features = false }
toa-core = { path = "../toa-core" }

[dev-dependencies]
tempfile = "3.24.0"
