[package]
name = "toa"
version = "0.1.0"
edition = "2024"

[features]
std = ["alloc"]
alloc = []
rayon = []

[dependencies]
toa-core = { path = "../toa-core" }
toa-kv   = { path = "../toa-kv"   }
arrayvec = { version = "0.7.6", default-features = false }
bytemuck = "1.25.0"

[dev-dependencies]
toa-kv = { path = "../toa-kv", features = ["std"] }
